# taggarr

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  taggarr.example.yaml  test.sh
.claude/docs/: architecture.md  configuration.md  testing.md
.claude/skills/: taggarr-patterns.md
.github/workflows/: docker-publish.yml  test.yml
contrib/launchd/: com.taggarr.plist
contrib/nssm/: install.ps1
contrib/systemd/: taggarr.system.service  taggarr.user.service
docker/: supervisord.conf
docs/: SECURITY.md
docs/brainstorms/: 2026-02-10-v1-release-roadmap-brainstorm.md
docs/plans/: 2026-01-30-modular-refactor-design.md  2026-01-30-modular-refactor-implementation.md  2026-01-30-multi-instance-implementation.md  2026-01-30-multi-instance-support-design.md  2026-01-30-radarr-support-design.md  2026-01-30-radarr-support-implementation.md  2026-02-01-test-coverage-design.md  2026-02-01-test-coverage-implementation.md  2026-02-02-native-install-design.md  2026-02-02-native-install-implementation.md  2026-02-02-ui-design.md  2026-02-02-ui-implementation.md  2026-02-10-feat-v1-release-roadmap-plan.md
frontend/: .gitignore  components.json  package-lock.json  package.json  tsconfig.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: error-boundary.tsx  protected-route.tsx
frontend/src/hooks/: useLogStream.ts
frontend/src/lib/: api.ts  auth.tsx  queries.ts  tag-utils.ts  toast.ts
frontend/src/routes/: __root.tsx  index.tsx  login.tsx  setup.tsx  (+1 more)
taggarr/: __init__.py  config.py  config_loader.py  config_schema.py  exceptions.py  languages.py  logging_setup.py  nfo.py  server.py
taggarr/api/: app.py  deps.py  websocket.py
taggarr/auth/: __init__.py  apikey.py  password.py  session.py
taggarr/backup/: __init__.py  operations.py
taggarr/db/: __init__.py  database.py  migrations.py  models.py
taggarr/migration/: __init__.py  config_migration.py  json_to_sqlite.py
taggarr/processors/: movies.py  tv.py
taggarr/services/: __init__.py  base_client.py  media.py  radarr.py  sonarr.py
taggarr/storage/: json_store.py
taggarr/workers/: __init__.py  backup_scheduler.py  command_processor.py  notification_dispatcher.py  scan_scheduler.py
tests/: conftest.py
tests/e2e/: README.md  auth.spec.ts  playwright.config.ts
tests/fixtures/: minimal_config.yaml  valid_config.yaml
tests/integration/: __init__.py  conftest.py  test_auth_flow.py  test_instance_flow.py  test_media_flow.py  test_smoke.py
tests/unit/: test_cli.py  test_config_loader.py  test_config_schema.py  test_init.py  test_languages.py  test_logging_setup.py  test_nfo.py  test_server.py
todos/: 001-pending-p2-duplicate-configerror-classes.md  002-complete-p2-non-atomic-json-save.md  003-pending-p2-orphan-cleanup-unhandled-oserror.md  004-complete-p3-remove-dead-code.md  005-complete-p3-rename-atomic-to-batched.md  006-complete-p3-video-extension-mismatch.md
(+84 files in other folders)
