[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taggarr"
dynamic = ["version"]
description = "Dub Analysis & Tagging for Sonarr/Radarr"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32",
    "pymediainfo>=7.0",
    "pycountry>=24.6",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.39.0",
    "tenacity>=8.0",
]

[project.scripts]
taggarr = "main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=taggarr --cov-report=term-missing --cov-fail-under=99"
markers = [
    "integration: marks tests requiring external services (deselect with '-m not integration')",
]

[tool.coverage.run]
branch = true
source = ["taggarr"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.setuptools.dynamic]
version = {attr = "taggarr.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["taggarr*"]

[tool.setuptools.package-dir]
"" = "."

[tool.uv]
package = true
